--- a/resume.tex
+++ b/resume.tex
@@ -42,22 +42,20 @@
 \cventry{2006--2010}{High School}{Academy of Science and Technology}{The 
   Woodlands, TX}{}{Class Rank: 2/593, GPA: 5.251} \\
 \section{Experience}
-\cventry{2012--}{Software Engineering Intern}{Twitter, Inc.}{San Francisco,
+\cventry{2013--}{Software Engineering Intern}{Gumroad, Inc.}{San Francisco,
+  CA}{}{A startup building http://gumroad.com, an awesome way for content 
+  creators to share and sell their digital products.}
+\cventry{2012--2013}{Software Engineering Intern}{Twitter, Inc.}{San Francisco,
   CA}{}{Worked on the Platform Services team, building parts of the internal
-  Thrift-based remote procedure call API. Working part-time for Twitter during
-  the fall semester.}
-\cventry{2011--}{15-150 Teaching Assistant}{Carnegie Mellon 
-  University}{Pittsburgh, PA}{}{Principles of Functional Programming, a class 
-  that teaches functional programming in Standard ML with a focus on 
-  mathematical proofs of code.}
-\cventry{2011--2012}{15-122 Teaching Assistant}{Carnegie Mellon 
-  University}{Pittsburgh, PA}{}{Principles of Imperative Computation, a class 
-  that teaches programming in C0 (a safe subset of C) with dynamic 
-  contract checking, as well as data structures.}
+  Thrift-based remote procedure call API. Worked part-time for Twitter during
+  the 2012-2013 school year.}
+\cventry{2011--2013}{15-150 Teaching Assistant}{Carnegie Mellon 
+University}{Pittsburgh, PA}{}{Principles of Functional Programming, a class 
+that teaches functional programming in Standard ML with a focus on mathematical 
+proofs of code.}
 \cventry{2011--2011}{Web Development Intern}{Offline Labs, Inc.}{San Francisco, 
-  CA}{}{A seed-stage startup building S\=osh, an activity recommendation 
-  engine. Worked extensively with Python and Django. See 
-  http://sosh.com.}%
+CA}{}{A seed-stage startup building S\=osh, an activity recommendation engine. 
+Worked extensively with Python and Django. See http://sosh.com.}%
 % Detailed achievements:%
 % \begin{itemize}%
 % \item Implemented a powerful AJAX-based search feature for activities in San Francisco
@@ -65,24 +63,19 @@
 % \item Designed and implemented a modular, automatic content aggregator and 
 %   feed/API scraper.
 % \end{itemize}}
-\cventry{2010--2011}{Web Development Intern}{25eight, Inc.}{Pittsburgh, PA}{}{An
-  AlphaLab-funded startup, building DeviceKnit, an online inventory for 
-  electronic devices. Worked primarily with Python/Django, reimplemented 
-  comprehensive device search using Xapian with JS-backed autocomplete. See 
-  http://deviceknit.com.}
-% \cventry{2007--2008}{Software Development Intern}{epic software group, 
-%   inc.}{The Woodlands, TX}{}{Small contract software firm, mostly web design 
-%   and development. Worked directly with clients to grow their online presence.} 
 \\
 \section{Skills}
-\cvline{Programming Languages}{\small Scala, Standard ML, JavaScript, Python, C}
+\cvline{Programming Languages}{\small Python, JavaScript, Scala, Standard ML, C}
 \cvline{Style}{\small Strong work ethic, team player, always looking to learn 
   more.} \\
 \section{Projects}
-\cventry{2012--}{tau}{}{}{}{Web application, originally written for Greylock Hackfest 2012, to provide a lightweight, simplified code review platform for instructors and students.}
-\cventry{2010--2011}{ScheduleMatch}{}{}{}{Web application that works with the ScheduleMan class schedule planner at CMU to show users which of their Facebook friends share classes with them. Built using Python and Django.}
-% \cventry{2010}{Social Assassins}{}{}{}{Web application to tie in with the 
-%popular live-action game 'Assassins', designed to make managing multiple 
-%instances of games easier for players and adminstrators. Built in Python and 
-%Django, for Yahoo! Hack U, Fall 2010.}
+\cventry{2013--}{Hamilton}{}{}{}{Web application, originally written for 
+PennApps Spring 2013, to provide a simple interface for constructing and 
+sharing vertex-edge graphs.}
+\cventry{2012--}{tau}{}{}{}{Web application, originally written for Greylock 
+Hackfest 2012, to provide a lightweight, simplified code review platform for 
+instructors and students.}
+\cventry{2010--2011}{ScheduleMatch}{}{}{}{Web application that works with the 
+ScheduleMan class schedule planner at CMU to show users which of their Facebook 
+friends share classes with them. Built using Python and Django.}
 \end{document}
