update resume for 9/13

--- a/resume.tex
+++ b/resume.tex
@@ -6,7 +6,7 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper]{moderncv}
+\documentclass[11pt,letterpaper]{moderncv}
 
 % moderncv themes
 \moderncvtheme[green]{classic}                % idem
@@ -16,7 +16,6 @@
 \usepackage{textcomp}
 
 % adjust the page margins
-\usepackage[scale=0.82]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}						% if you want to change the width of the column with the dates
 %\AtBeginDocument{\setlength{\maketitlenamewidth}{6cm}}  % only for the classic theme, if you want to change the width of your name placeholder (to leave more space for your address details
 %\AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
@@ -38,11 +37,11 @@
 \maketitle
 \section{Education}
 \cventry{2010--2014}{Bachelors in Computer Science}{Carnegie Mellon 
-  University}{Pittsburgh, PA}{}{GPA: 3.53}  % arguments 3 to 6 can be left 
+University}{Pittsburgh, PA}{}{GPA: 3.48}  % arguments 3 to 6 can be left 
 \cventry{2006--2010}{High School}{Academy of Science and Technology}{The 
-  Woodlands, TX}{}{Class Rank: 2/593, GPA: 5.251} \\
+Woodlands, TX}{}{Class Rank: 2/593, GPA: 5.251} \\
 \section{Experience}
-\cventry{2013--}{Software Engineering Intern}{Gumroad, Inc.}{San Francisco,
+\cventry{2013}{Software Engineering Intern}{Gumroad, Inc.}{San Francisco,
   CA}{}{A startup building http://gumroad.com, an awesome way for content 
   creators to share and sell their digital products.}
 \cventry{2012--2013}{Software Engineering Intern}{Twitter, Inc.}{San Francisco,
@@ -53,8 +52,8 @@
 University}{Pittsburgh, PA}{}{Principles of Functional Programming, a class 
 that teaches functional programming in Standard ML with a focus on mathematical 
 proofs of code.}
-\cventry{2011--2011}{Web Development Intern}{Offline Labs, Inc.}{San Francisco, 
-CA}{}{A seed-stage startup building S\=osh, an activity recommendation engine. 
+\cventry{2011}{Web Development Intern}{Offline Labs, Inc.}{San Francisco, 
+CA}{}{A seed-stage startup building S\=osh, an activity recommendation engine.  
 Worked extensively with Python and Django. See http://sosh.com.}%
 % Detailed achievements:%
 % \begin{itemize}%
@@ -65,17 +64,16 @@ Worked extensively with Python and Django. See http://sosh.com.}%
 % \end{itemize}}
 \\
 \section{Skills}
-\cvline{Programming Languages}{\small Python, JavaScript, Scala, Standard ML, C}
+\cvline{Programming Languages}{\small Python, JavaScript, Ruby, Scala, Standard ML, C}
 \cvline{Style}{\small Strong work ethic, team player, always looking to learn 
   more.} \\
 \section{Projects}
+\cventry{2013--}{PartyStarter}{}{}{}{Web app, written for PennApps Fall 2013, 
+allowing users to host parties and crowdfund them via Venmo.}
 \cventry{2013--}{Hamilton}{}{}{}{Web application, originally written for 
 PennApps Spring 2013, to provide a simple interface for constructing and 
 sharing vertex-edge graphs.}
 \cventry{2012--}{tau}{}{}{}{Web application, originally written for Greylock 
 Hackfest 2012, to provide a lightweight, simplified code review platform for 
 instructors and students.}
-\cventry{2010--2011}{ScheduleMatch}{}{}{}{Web application that works with the 
-ScheduleMan class schedule planner at CMU to show users which of their Facebook 
-friends share classes with them. Built using Python and Django.}
 \end{document}
